fix(author-list): Spacing

--- a/src/styles/components/_author-list.scss
+++ b/src/styles/components/_author-list.scss
@@ -24,11 +24,10 @@
       }
 
       .bio {
-        margin-top: 0.8rem;
+        margin-top: 1.5rem;
         line-height: $line-height;
         background-color: $text-color-white;
         padding: 1rem;
-        margin-bottom: 0.8rem;
       }
 
       .social-links {
